# gcp-cloud-functions-python

./: Dockerfile.Python310  Dockerfile.Python311  Dockerfile.Python312  Dockerfile.Python37  Dockerfile.Python38  Dockerfile.Python39  README.md
sample-project/: .env  Dockerfile  compose.yml  main.py  pyproject.toml
